<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="132dp"
        android:text="@string/StatusText"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="32dp"
        android:text="@string/newgame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="400dp"
        android:layout_height="573dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Button1"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="116dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="151dp"
            android:layout_marginTop="116dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button3"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="272dp"
            android:layout_marginTop="109dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button4"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="259dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button5"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="152dp"
            android:layout_marginTop="263dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="274dp"
            android:layout_marginTop="259dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button7"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="389dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button8"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="152dp"
            android:layout_marginTop="392dp"
            android:text="@string/emptydot" />

        <Button
            android:id="@+id/Button9"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="397dp"
            android:text="@string/emptydot" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="84dp"
        android:text="@string/Computer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/playername1"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/PlayerName1"
        android:maxLength="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/playername2"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/PlayerName2"
        android:maxLength="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>